<resources>
    <string name="app_name">KHQuiz</string>
    <string name="title_intro">Prepare yourself for...</string>
    <string name="Q1">Question One: What year was the first Kingdom Hearts released?</string>
    <string name="q1a1">2000</string>
    <string name="q1a2">2002</string>
    <string name="q1a3">2004</string>
    <string name="q1a4">2005</string>
    <string name="Q2">Question Two: Which world was not in KH2?</string>
    <string name="q2a1">Agrabah</string>
    <string name="q2a2">1000 Acre Woods</string>
    <string name="q2a3">Deep Jungle</string>
    <string name="q2a4">Port Royal</string>
    <string name="Q3">Question Three: Which of the following characters can use the keyblade?</string>
    <string name="q3a1">Sora</string>
    <string name="q3a2">Kairi</string>
    <string name="q3a3">Roxas</string>
    <string name="q3a4">Mickey</string>
    <string name="q3a5">Goofy</string>
    <string name="q3a6">Donald Duck</string>
    <string name="Q4">Question Four: Who is Roxas\'s and Axel\'s other best friend?</string>
    <string name="submit_btn">Submit</string>
    <string name="reset_btn">Reset</string>
    <string name="zero_score">%1$s/4 - You missed every question. Maybe it\'s time for a replay of the games?</string>
    <string name="score_one">%1$s/4 - You had one correct answer. Might need to explore the side games again!</string>
    <string name="score_two">%1$s/4 - You got half of them. Impressive, with how confusing these games can be storywise. Study up and try again!</string>
    <string name="score_three">%1$s/4 - Oh, so close! You only missed one!</string>
    <string name="score_perfect">%1$s/4 - You are a Keyblade Master!</string>
</resources>
