<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.khquiz.MainActivity"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/title_intro"
  />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/kh3transparent"
            android:layout_marginTop="-350dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-350dp"
            android:textSize="24sp"
            android:layout_marginBottom="10dp"
            android:text="@string/Q1"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/q1_radio_group">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/q1a1"
                android:text="@string/q1a1"
                android:onClick="onRadioButtonClicked"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/q1a2"
                android:text="@string/q1a2"
                android:onClick="onRadioButtonClicked"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/q1a3"
                android:text="@string/q1a3"
                android:onClick="onRadioButtonClicked"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/q1a4"
                android:text="@string/q1a4"
                android:onClick="onRadioButtonClicked"
                />
        </RadioGroup>
        <TextView
            style="@style/QuestionText"
            android:text="@string/Q2"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/q2_radio_group">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/q2a1"
                android:text="@string/q2a1"
                android:onClick="onRadioButton2Clicked"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/q2a2"
                android:text="@string/q2a2"
                android:onClick="onRadioButton2Clicked"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/q2a3"
                android:text="@string/q2a3"
                android:onClick="onRadioButton2Clicked"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/q2a4"
                android:text="@string/q2a4"
                android:onClick="onRadioButton2Clicked"
                />
        </RadioGroup>
        <TextView
            style="@style/QuestionText"
            android:text="@string/Q3"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/q3a1"
            android:text="@string/q3a1"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/q3a2"
            android:text="@string/q3a2"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/q3a3"
            android:text="@string/q3a3"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/q3a4"
            android:text="@string/q3a4"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/q3a5"
            android:text="@string/q3a5"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/q3a6"
            android:text="@string/q3a6"
            />
        <TextView
            style="@style/QuestionText"
            android:text="@string/Q4"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/q4_edit_text"
            android:layout_marginHorizontal="10dp"
            android:inputType="textCapWords"
            android:layout_marginBottom="16dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="90dp"
            android:id="@+id/submit_score"
            android:onClick="submitScore"
            android:text="@string/submit_btn"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/submit_score"
            android:layout_marginLeft="10dp"
            android:text="@string/reset_btn"
            android:onClick="resetScores"/>
        </RelativeLayout>
    </LinearLayout>


</ScrollView>
